--- a/DailyQuestions/AAI-TS-Assignment02.ipynb
+++ b/DailyQuestions/AAI-TS-Assignment02.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "c105bfe8",
+   "id": "57569993",
    "metadata": {},
    "source": [
     "Consider the Nile rive flow for 100 years.\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "4ede6d96",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -51,13 +51,15 @@
     }
    ],
    "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
     "nile_df = sm.datasets.nile.load_pandas()\n",
     "nile_df.data['volume'].plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "16196824",
    "metadata": {},
    "outputs": [
@@ -67,7 +69,7 @@
        "(100, 2)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,6 +77,14 @@
    "source": [
     "nile_df.data.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffe80a0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
