--- a/DailyQuestions/AAI-TS-Assignment02.ipynb
+++ b/DailyQuestions/AAI-TS-Assignment02.ipynb
@@ -10,15 +10,15 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "4875bb8c",
+   "cell_type": "markdown",
+   "id": "13efc7ee",
    "metadata": {},
    "source": [
-    "Consider the Nile rive flow for 100 years.\n",
-    "a)Is the data stationary?\n",
-    "b)Split the data into train and test(last 10 years). Train an appropriate ARIMA model to forecast the flow\n",
-    "c)What is the order of the ARIMA model.\n",
-    "d)Compare the forecast with the actual"
+    "Consider the Nile rive flow for 100 years.<br>\n",
+    "a)Is the data stationary?<br>\n",
+    "b)Split the data into train and test(last 10 years). Train an appropriate ARIMA model to forecast the flow<br>\n",
+    "c)What is the order of the ARIMA model.<br>\n",
+    "d)Compare the forecast with the actual<br>"
    ]
   },
   {
