--- a/DailyQuestions/AAI-TS-Assignment03.ipynb
+++ b/DailyQuestions/AAI-TS-Assignment03.ipynb
@@ -10,12 +10,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c940aa1d",
+   "cell_type": "markdown",
+   "id": "5cb7a4ae",
    "metadata": {},
    "source": [
-    "Consider the Copper datasets in StatsModels.\n",
-    "Train an appropriate model to forecast the consumption based on price, income index and aluminimu price(alternative to copper)"
+    "Consider the Copper datasets in StatsModels.<br>\n",
+    "Train an appropriate model to forecast the consumption based on price, income index and aluminium price(alternative to copper)"
    ]
   },
   {
