--- a/DailyQuestions/AAI-TS-Assignment01.ipynb
+++ b/DailyQuestions/AAI-TS-Assignment01.ipynb
@@ -10,15 +10,15 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "86866c02",
+   "cell_type": "markdown",
+   "id": "488ca7de",
    "metadata": {},
    "source": [
-    "Icecream sales is highly dependent on season. Given below is the sales (in $amount) of monthly sales of icecream for a brand.\n",
-    "a) Split the data as train and test(90-10)\n",
-    "b) Fit an apropriate smoothing method to the train data\n",
-    "c) Forecast the sales for the test data\n",
-    "d) Calulate the MAPE in the test period."
+    "Icecream sales is highly dependent on season. Given below is the sales (in $amount) of monthly sales of icecream for a brand.<br>\n",
+    "a) Split the data as train and test(90-10)<br>\n",
+    "b) Fit an apropriate smoothing method to the train data<br>\n",
+    "c) Forecast the sales for the test data<br>\n",
+    "d) Calulate the MAPE in the test period.<br>"
    ]
   },
   {
